// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EntryBrief/> renders correctly 1`] = `
<div>
  <styled.div
    dangerouslySetInnerHTML={
      Object {
        "__html": "testText",
      }
    }
  />
  <p />
</div>
`;

exports[`<EntryBrief/> renders correctly with optional props 1`] = `
<div>
  <styled.div>
    <styled.img
      src="/images/testImageFileName"
    />
  </styled.div>
  <styled.div
    dangerouslySetInnerHTML={
      Object {
        "__html": "testText",
      }
    }
  />
  <p>
    <Link
      replace={false}
      to="testMoreButtonLink"
    >
      <inject-_class-with-languageStore
        name="entry__continue_reading"
      />
       »
    </Link>
  </p>
</div>
`;
